Another hotfix on activities alignment. Further work will now exclusively be about fixing small problems.

--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -313,7 +313,7 @@ header nav ul li a:focus {
     width: 8%;
     height: 143px;
     margin-top: -12px;
-    margin-right: 10px;
+    padding-right: 10px;
 }
 
 
@@ -521,7 +521,7 @@ header nav ul li a:focus {
 /* ACTIVITIES SECTION  */
 
 .activities_section {
-    margin: 60px 3% 60px 3%;
+    margin: 60px 3.5% 60px 3.5%;
 }
 
 .activities_section h2 {
